# ScopeGuarded

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  dependencies.cmake
src/: CMakeLists.txt
src/include/ScopeGuarded/: ScopeGuard.hpp  ScopeGuarded.hpp
src/include/ScopeGuarded/details/: ScopeGuard.hpp  ScopeGuardExceptional.hpp  UncaughtExceptionCounter.hpp
src/src/: ScopeGuard.t.cpp
